# WATCH_DOG

./: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cpu.rs  disk.rs  main.rs  network.rs  process.rs  ram.rs  ws_handler.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: cpu-cores-chart.tsx  cpu-usage-chart.tsx  dashboard-tabs.tsx  disk-usage-chart.tsx  memory-usage-chart.tsx  network-data-table.tsx  process-data-table.tsx  radial-chart.tsx  sidebar.tsx  sortable-tab-button.tsx  system-info-component.tsx
src/app/components/ui/: chart.tsx  dropdown-menu.tsx  placeholders-and-vanish-input.tsx  progress.tsx  tabs.tsx
